--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,21 @@ code {
   background-color: #4CAF50;
   color: white;
 }
+.modal {
+  display: none;
+}
+
+.modal.modal--is-open {
+  display: block;
+  border: 2px solid green;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: 'blue';
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+}
